--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>A whale of a greeting</title>
-  <!-- Add something here to fix trademark -->
 </head>
 <body>
   <h1>hello, world</h1>
@@ -12,5 +11,6 @@
   <p>Call me Ishmael.</p>
   <a href="https://www.flickr.com/photos/28883788@N04/10097824543">
     <img src="images/breaching_whale.jpg" alt="Whale">
-  </a></body>
+  </a>
+</body>
 </html>
